[gd_scene load_steps=4 format=3 uid="uid://choh7k4ewyccg"]

[ext_resource type="Script" path="res://tscn_files/option_screen.gd" id="1_3gax8"]
[ext_resource type="FontFile" uid="uid://chtiluc2ukomy" path="res://PixelifySans-VariableFont_wght.ttf" id="1_yo0lo"]
[ext_resource type="PackedScene" path="res://tscn_files/next_button.tscn" id="3_io4ee"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_3gax8")

[node name="add_health" type="Button" parent="."]
modulate = Color(10, 1, 1, 1)
offset_left = 80.0
offset_top = 380.0
offset_right = 310.0
offset_bottom = 508.0
theme_override_fonts/font = ExtResource("1_yo0lo")
theme_override_font_sizes/font_size = 24
text = "Health +1
5 points"

[node name="health" type="Label" parent="."]
offset_left = 482.0
offset_top = 136.0
offset_right = 618.0
offset_bottom = 184.0
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("1_yo0lo")
theme_override_font_sizes/font_size = 36
text = "HEALTH: "

[node name="upgrades" type="Label" parent="."]
offset_left = 378.0
offset_top = 75.0
offset_right = 720.0
offset_bottom = 123.0
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("1_yo0lo")
theme_override_font_sizes/font_size = 36
text = "CHOOSE UPGRADES"
horizontal_alignment = 1

[node name="shield" type="Label" parent="."]
offset_left = 484.0
offset_top = 238.0
offset_right = 619.0
offset_bottom = 286.0
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("1_yo0lo")
theme_override_font_sizes/font_size = 36
text = "SHIELD: "

[node name="speed" type="Label" parent="."]
offset_left = 482.0
offset_top = 186.0
offset_right = 603.0
offset_bottom = 234.0
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("1_yo0lo")
theme_override_font_sizes/font_size = 36
text = "SPEED: "

[node name="points" type="Label" parent="."]
offset_left = 947.0
offset_top = -1.0
offset_right = 1079.0
offset_bottom = 47.0
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("1_yo0lo")
theme_override_font_sizes/font_size = 36
text = "Points: "

[node name="add_speed" type="Button" parent="."]
modulate = Color(2, 3, 12, 1)
offset_left = 344.0
offset_top = 380.0
offset_right = 574.0
offset_bottom = 508.0
theme_override_fonts/font = ExtResource("1_yo0lo")
theme_override_font_sizes/font_size = 24
text = "Speed +1
5 points
"

[node name="slow_down" type="Button" parent="."]
modulate = Color(1, 5.88, 20.88, 1)
offset_left = 603.0
offset_top = 383.0
offset_right = 833.0
offset_bottom = 511.0
theme_override_fonts/font = ExtResource("1_yo0lo")
theme_override_font_sizes/font_size = 24
text = "Slow Down +1
5 points"

[node name="add_shield" type="Button" parent="."]
modulate = Color(7.36, 9.12, 55.88, 1)
offset_left = 874.0
offset_top = 382.0
offset_right = 1104.0
offset_bottom = 510.0
theme_override_fonts/font = ExtResource("1_yo0lo")
theme_override_font_sizes/font_size = 24
text = "Shield +1
10 points"

[node name="next_button" parent="." instance=ExtResource("3_io4ee")]
offset_left = 959.0
offset_top = 535.0
offset_right = 1122.0
offset_bottom = 625.0
text = "Next"

[connection signal="pressed" from="add_health" to="." method="_on_add_health_pressed"]
[connection signal="pressed" from="add_speed" to="." method="_on_add_speed_pressed"]
[connection signal="pressed" from="slow_down" to="." method="_on_slow_down_pressed"]
[connection signal="pressed" from="add_shield" to="." method="_on_add_shield_pressed"]
